'Release Script: update versions for 6.0.0.CR1'