@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version='1.0' encoding='UTF-8'?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.infinispan.server</groupId>
         <artifactId>infinispan-server-versions</artifactId>
-        <version>6.0.0-SNAPSHOT</version>
+        <version>6.0.0.CR1</version>
         <relativePath>../versions/pom.xml</relativePath>
     </parent>
 
@@ -61,7 +60,7 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
-        <!--- @ThreadSafe annotation -->
+        
         <dependency>
             <groupId>net.jcip</groupId>
             <artifactId>jcip-annotations</artifactId>
@@ -105,7 +104,7 @@
     </dependencies>
 
     <properties>
-        <!--<ispnserver.ts.dir>${basedir}/..</ispnserver.ts.dir> -->
+        
         <ispnserver.project.dir>${basedir}/..</ispnserver.project.dir>
         <server.build.dist>${ispnserver.project.dir}/build/target/infinispan-server-${project.version}
         </server.build.dist>
@@ -114,7 +113,7 @@
         <server3.dist>${basedir}/target/server/node3</server3.dist>
         <resources.dir>${basedir}/src/test/resources</resources.dir>
         <jvm.memory.args>-Xmx512m -XX:MaxPermSize=128m</jvm.memory.args>
-        <!--jvm.memory.args>-Xmx512m -XX:MaxPermSize=128m -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</jvm.memory.args-->
+        
         <jvm.ip.stack>-Djava.net.preferIPv4Stack=true</jvm.ip.stack>
         <server.jvm.args>${jvm.ip.stack} ${jvm.memory.args}</server.jvm.args>
         <log4j.configuration>log4j.xml</log4j.configuration>
@@ -178,8 +177,7 @@
                         <phase>none</phase>
                     </execution>
                     <execution>
-						<!-- this suite can include all test cases that start the containers 
-							on method or class level -->
+						
                         <id>suite-manual</id>
                         <phase>${suite.manual.phase}</phase>
                         <goals>
